# ebirdmcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
ebirdmcp/: client.py  server.py
tests/: test_server.py
